refactored and fixed layout in case of right scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 html {
   font-family: var(--font-inter);
   @apply text-bone-white;
+  overflow-x: hidden;
 }
 
 .logo {
